--- a/app/src/main/res/menu/movie_menu.xml
+++ b/app/src/main/res/menu/movie_menu.xml
@@ -9,4 +9,9 @@
         android:id="@+id/action_most_popular"
         android:title="@string/sort_most_popular"
         app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/action_favorite_movies"
+        android:title="@string/my_favorite_movies"
+        app:showAsAction="never"/>
 </menu>
