--- a/app/src/main/res/layout/trailers_movie_reviews_list_merge.xml
+++ b/app/src/main/res/layout/trailers_movie_reviews_list_merge.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout"
@@ -20,11 +21,11 @@
     <FrameLayout
         android:id="@+id/trailer_frame_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/divider"
+        android:layout_height="200dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="@id/constraintLayout"
         app:layout_constraintStart_toStartOf="@id/constraintLayout"
-        app:layout_constraintTop_toBottomOf="@+id/trailers_title">
+        app:layout_constraintTop_toTopOf="@+id/constraintLayout">
 
         <ProgressBar
             android:id="@+id/trailer_progress_bar"
@@ -40,13 +41,13 @@
     </FrameLayout>
 
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/divider"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="20dp"
-        app:layout_constraintGuide_percent="0.5" />
+<!--    <androidx.constraintlayout.widget.Guideline-->
+<!--        android:id="@+id/divider"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="1dp"-->
+<!--        android:orientation="horizontal"-->
+<!--        app:layout_constraintGuide_begin="20dp"-->
+<!--        app:layout_constraintGuide_percent="0.5" />-->
 
     <TextView
         android:id="@+id/reviews_title"
@@ -56,16 +57,16 @@
         android:layout_marginLeft="16dp"
         android:text="@string/reviews"
         app:layout_constraintStart_toStartOf="@id/constraintLayout"
-        app:layout_constraintTop_toBottomOf="@+id/divider" />
+        app:layout_constraintTop_toBottomOf="@+id/trailer_frame_layout" />
 
     <FrameLayout
         android:id="@+id/review_frame_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
+        android:layout_height="200dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
         app:layout_constraintStart_toStartOf="@+id/constraintLayout"
-        app:layout_constraintTop_toBottomOf="@+id/reviews_title">
+        app:layout_constraintTop_toBottomOf="@+id/trailer_frame_layout">
 
         <ProgressBar
             android:id="@+id/review_progress_bar"
