--- a/app/src/main/res/layout/linear_detail_movie_title_id.xml
+++ b/app/src/main/res/layout/linear_detail_movie_title_id.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<!--<merge xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    xmlns:tools="http://schemas.android.com/tools">-->
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <TextView
     android:id="@+id/movie_id"
@@ -17,19 +24,17 @@
         <!--            android:text="@{userMovie.id}"-->
 
     <TextView
-    android:id="@+id/movie_title"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="32dp"
-    android:layout_marginLeft="32dp"
-    android:layout_marginTop="16dp"
-    android:fontFamily="@font/anton"
-    android:hint="@string/hint_movie_title"
-    android:textSize="18sp"
-    android:textStyle="bold"
-    app:layout_constraintStart_toEndOf="@+id/movie_id"
-    app:layout_constraintTop_toTopOf="parent"
-    tools:text="@string/hint_movie_title" />
+        android:id="@+id/movie_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/anton"
+        android:hint="@string/hint_movie_title"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@string/hint_movie_title" />
 
     <View
     android:id="@+id/view"
@@ -42,5 +47,15 @@
     app:layout_constraintTop_toBottomOf="@+id/movie_title" />
 
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline"
+            android:layout_width="1dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="20dp"
+            app:layout_constraintGuide_percent="0.3" />
 
-</merge>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+<!--</merge>-->
