--- a/app/src/main/res/layout/related_movie_details.xml
+++ b/app/src/main/res/layout/related_movie_details.xml
@@ -1,11 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/scrollview"
+    tools:context=".relatedmovies.RelatedMoviesDetails">
 
     <include android:id="@+id/movie_details_merge"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         layout="@layout/movie_details_merge"/>
 
 </ScrollView>
+
+
+
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="match_parent">-->
+
+<!--    <include android:id="@+id/movie_details_merge"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        layout="@layout/movie_details_merge"/>-->
+
+<!--</ScrollView>-->
